# 1-column-train

./: .gitignore  CLAUDE.md  READMD.md  README.md  column_classifier.meta.json  column_classifier.pt  correct_detections.ipynb  finalize.py  generate_column.py  issue.text  pyproject.toml  test_column.ipynb  test_detection_yolo_cnn.ipynb  train.py  train_continue.py  yolo11n-column.yaml
column_review/: __init__.py  bbox_classifier.py  cli.py  db.py  inference.py  jobs.py  path_bootstrap.py  retrain_jobs.py  server.py  yolo_rescue.py
column_review.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
column_review/routes/: detections.py  export.py  files.py  submit.py  tiles.py  train.py
column_review/static/: app.js  index.html  osd-test.html  osd-test3.html  styles.css
conversation/: 2026-05-04-060127-refer-to-the-generate-columnpy-file-this-file-i.txt  2026-05-04-222031-this-session-is-being-continued-from-a-previous-c.txt  2026-05-05-215328-this-session-is-being-continued-from-a-previous-c.txt  2026-05-06-225738-this-session-is-being-continued-from-a-previous-c.txt  2026-05-15-110332-this-session-is-being-continued-from-a-previous-c.txt  2026-06-02-172203-this-session-is-being-continued-from-a-previous-c.txt  2026-06-02-175251-this-session-is-being-continued-from-a-previous-c.txt  2026-06-03-112359-this-session-is-being-continued-from-a-previous-c.txt
data/: corrections.db
data/hard_negatives/: manifest.json
data/raw/drawings/: TGCH-TD-S-200-L3-00.dzi  TGCH-TD-S-200-L3-00.meta.json
data/yolo_finetune/: data.yaml
data/yolo_finetune/labels/: train.cache  val.cache
scripts/: __init__.py  _yolo_dataset_utils.py  absorption_gate.py  check_regression.py  corrections_logger.py  hard_negative_pool.py  hitl.py  ingest_drawings.py  inspect_corrections.py  migrate_pools_to_rescue_tiles.py  ood_detector.py  postprocess_detections.py  postprocess_pipeline.py  rescue_tile_pool.py  retrain_yolo.py  split_drawings.py  tile_geometry.py  tiled_inference.py  train_bbox_classifier.py  train_both.py  train_yolo_rescue.py
scripts/correction_app/: __init__.py  app.py
(+39 files in other folders)
